@@ -1,3 +1,5 @@
+- probe floppies only once
+
 Version 11.21 - 21 August 2008
 
 - diskdrake
